# conclaude

./: .conclaude.yaml  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  biome.jsonc  bun.nix  cliff.toml  conclaude-schema.json  conclaude.config.ts  dist-workspace.toml  example-config.yaml  flake.nix  go.mod  go.sum  main.go  output-20250910-074901.json  output-20250910-075757.json  package-lock.json  package.json  plan-dist-manifest.json  run.sh  schema.json  tsconfig.json
.claude/: settings.json
.claude/agents/: markdown-documentor.md  playwright-website-visual-tester.md
.claude/commands/: validate-plan.md
.claude/commands/spectr/: apply.md  archive.md  proposal.md
.github/workflows/: changelog.yml  ci.yml  release.yml  schema-update.yml  schema.yml  upload-schema.yml
cmd/: generate_schema.go  hooks.go  init.go  root.go  visualize.go
conclaude-field-derive/: Cargo.toml
conclaude-field-derive/src/: lib.rs
go-implementation/: .gitignore  .golangci.json  flake.nix  go.mod  go.sum  main.go
go-implementation/cmd/: generate_schema.go  hooks.go  init.go  root.go  visualize.go
go-implementation/internal/config/: config.go  config_test.go
go-implementation/internal/hooks/: hooks.go
go-implementation/internal/logger/: logger.go
go-implementation/internal/schema/: schema.go
internal/config/: config.go  config_test.go
internal/hookdata/: output-20250910-075622.json  types.go
internal/hooks/: hooks.go
internal/logger/: logger.go
internal/schema/: schema.go  schema_test.go
internal/types/: types.go
scripts/: Cargo.toml  download-ts-sdk.sh  generate-schema.rs
specs/001-grep-prompt-system/: data-model.md  plan.md  research.md  spec.md
spectr/: AGENTS.md  project.md
src/: config.rs  config.ts  default-config.yaml  gitignore.rs  hooks.rs  index.ts  lib.rs  logger.rs  logger.ts  main.rs  schema.rs  types.rs  types.ts
src/database/: connection.rs  mod.rs
tests/: .conclaude-test.yaml  config.test.ts  config_tests.rs  database_integration.rs  hooks_tests.rs  index.test.ts  integration_tests.rs  logger.test.ts  logger_tests.rs  output_limiting_tests.rs  prevent_additions_integration_test.rs  prevent_additions_tests.rs  settings_parsing_test.rs  timeout_integration_tests.rs  timeout_tests.rs  types.test.ts  types_tests.rs
wix/: main.wxs
(+249 files in other folders)
