[package]
name = "conclaude"
version = "0.1.2"
edition = "2021"
description = "Claude Code hook handler CLI tool that processes hook events and manages lifecycle hooks for tool usage, session management, and transcript processing"
license = "MIT"
authors = ["Conner Ohnesorge"]
repository = "https://github.com/connix-io/conclaude"
keywords = ["claude-code", "hooks", "cli", "ai", "automation"]

[[bin]]
name = "conclaude"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
glob = "0.3"
config = "0.14"
tempfile = "3.8"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
