[package]
name = "conclaude"
version = "0.1.6"
edition = "2021"
description = "Claude Code hook handler CLI tool that processes hook events and manages lifecycle hooks for tool usage, session management, and transcript processing"
license = "MIT"
authors = ["Conner Ohnesorge"]
repository = "https://github.com/connix-io/conclaude"
keywords = ["claude-code", "hooks", "cli", "ai", "automation"]
default-run = "conclaude"

[package.metadata.wix]
upgrade-guid = "9AF570DA-8336-405C-A402-9B76ECDD4C3E"
path-guid = "5D54B933-97E1-4A8E-AD21-A67167B1FDAD"
license = false
eula = false

[[bin]]
name = "conclaude"
path = "src/main.rs"

[[bin]]
name = "generate-schema"
path = "scripts/generate-schema.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
glob = "0.3"
config = "0.14"
tempfile = "3.8"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
notify-rust = "4.10"

[dev-dependencies]
tempfile = "3.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
